# libcloudphxx

./: CMakeLists.txt  libcloudph++-config.cmake
bindings/python/: CMakeLists.txt  lib.cpp
include/libcloudph++/blk_2m/: rhs_columnwise.hpp
include/libcloudph++/common/: kappa_koehler.hpp
include/libcloudph++/common/detail/: toms748.hpp
include/libcloudph++/lgrngn/: opts_init.hpp  particles.hpp
models/parcel/tests/Grabowski_and_Pawlowska_2023/: CMakeLists.txt  command_line_options.hpp  output.hpp  parcel.cpp  settings.hpp
src/: lib.cu  particles.tpp  particles_diag.ipp  particles_distmem.ipp  particles_impl_chem_dissoc.ipp  particles_impl_coal.ipp  particles_impl_cond.ipp  particles_impl_cond_common.ipp  particles_impl_dist_analysis.ipp  particles_impl_hskpng_count.ipp  particles_impl_hskpng_remove.ipp  particles_impl_hskpng_resize.ipp  particles_impl_hskpng_vterm.ipp  particles_impl_init_hskpng_npart.ipp  particles_impl_init_kernel.ipp  particles_impl_kernel.ipp  particles_impl_moms.ipp  particles_impl_src.ipp  particles_init.ipp  particles_multi_gpu.tpp  particles_multi_gpu_ctor.ipp  particles_multi_gpu_diag.ipp  particles_multi_gpu_step.ipp  particles_pimpl_ctor.ipp  particles_step.ipp  tpl_calc_wrapper.hpp
src/detail/: distmem.hpp  kernel_interpolation.hpp  kernels.hpp  urand.hpp
src/impl/: particles_impl.ipp  particles_impl_adve.ipp  particles_impl_coal.ipp  particles_impl_cond_common.ipp  particles_impl_cond_sstp.ipp  particles_impl_hskpng_resize.ipp  particles_impl_hskpng_tke.ipp  particles_impl_hskpng_turb_vel.ipp  particles_impl_init_e2l.ipp  particles_impl_init_grid.ipp  particles_impl_init_hskpng_ncell.ipp  particles_impl_init_hskpng_npart.ipp  particles_impl_init_kernel.ipp  particles_impl_init_sanity_check.ipp  particles_impl_init_sync.ipp  particles_impl_pack.ipp  particles_impl_sedi.ipp  particles_impl_turb_adve.ipp  particles_impl_unpack.ipp
src/impl/condensation/perparticle/: perparticle_nomixing_adaptive_sstp_cond.ipp  release_arrays_for_perparticle_sstp.ipp
src/impl/condensation_deposition/perparticle/: acquire_arrays_for_perparticle_sstp.ipp  calculate_noncond_perparticle_sstp_delta.ipp  release_arrays_for_perparticle_sstp.ipp
src/impl/diagnose_SD_attributes/: particles_impl_moms.ipp
src/impl_multi_gpu/: particles_multi_gpu_impl_step_async_and_copy.ipp
tests/DYCOMS2D/src/: CMakeLists.txt  calc_forces.hpp  forcings.hpp  icicle.cpp  kin_cloud_2d_common.hpp  kin_cloud_2d_lgrngn.hpp  opts_lgrngn.hpp  setup.hpp
tests/DYCOMS2D/tests/fig_a/: CMakeLists.txt  calc.cpp  gnuplot.hpp  hdf5.hpp  plot_lgrngn.cpp  plot_lgrngn_prof.cpp  plot_lgrngn_prof_ensamble.cpp  plot_lgrngn_prof_ensamble_compare.cpp  plot_lgrngn_series.cpp  plot_lgrngn_series_ensamble.cpp  plot_lgrngn_series_ensamble_compare.cpp
tests/DYCOMS2D_old/tests/fig_a/: CMakeLists.txt  calc.cpp  hdf5.hpp  plot_lgrngn_series.cpp
tests/DYCOMS3D/src/: calc_forces.hpp  forcings.hpp  icicle.cpp  kin_cloud_3d_common.hpp  kin_cloud_3d_lgrngn.hpp  opts_lgrngn.hpp  setup.hpp
tests/DYCOMS3D/tests/fig_a/: CMakeLists.txt  calc.cpp  gnuplot.hpp  hdf5.hpp  plot_lgrngn.cpp  plot_lgrngn_prof.cpp  plot_lgrngn_series.cpp
tests/DYCOMSquasi2D/src/: icicle.cpp  setup.hpp
tests/DYCOMSquasi2D/tests/fig_a/: calc.cpp
tests/VOCALS2D/src/: calc_forces.hpp  forcings.hpp  kin_cloud_2d_lgrngn.hpp  opts_lgrngn.hpp  setup.hpp
tests/VOCALS2D/tests/fig_a/: CMakeLists.txt  calc.cpp  plot_lgrngn_prof.cpp  plot_lgrngn_prof_ensamble.cpp  plot_lgrngn_series.cpp  plot_lgrngn_series_ensamble.cpp
tests/moist_thermal/: CMakeLists.txt  gnuplot.hpp  lgrngn_solver.hpp  moist_thermal.cpp  plot_lgrngn.cpp  setup.hpp
tests/paper_GMD_2015/src/: icmw8_case1.hpp  kin_cloud_2d_common.hpp  kin_cloud_2d_lgrngn.hpp  opts_lgrngn.hpp
tests/paper_GMD_2015/tests/: CMakeLists.txt
tests/paper_GMD_2015/tests/fig_a/: CMakeLists.txt  bins.hpp  calc.cpp  plot_lgrngn.cpp  plot_lgrngn_spec.cpp  plot_lgrngn_wmd.cpp
tests/paper_GMD_2015/tests/totals_vs_time/: CMakeLists.txt  calc_tot.cpp  hdf5.hpp
tests/python/unit/: test_SD_removal.py  test_col_kernels.py
tests/strato_bl/src/: .setup.hpp.swp  icicle.cpp  kin_cloud_2d_common.hpp  kin_cloud_2d_lgrngn.hpp  opts_lgrngn.hpp  setup.hpp
tests/strato_bl/tests/fig_a/: CMakeLists.txt  calc.cpp  gnuplot.hpp  plot_lgrngn.cpp  plot_lgrngn_prof.cpp  plot_lgrngn_series.cpp
